[project]
name = "nopperabo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Quasar Jarosz", email = "quasar@uams.edu" }
]
dependencies = [
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "jsonargparse[signatures]>=4.32.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
# virtual = true
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.workspace]
members = ["masker"]

[tool.hatch.build.targets.wheel]
packages = ["src/nopperabo"]
